include ER diagram to README; update insert queries for Redshift

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ Data_Warehouse_Project_Template/
 *Solution.ipynb
 log_json_path.json
 DataEngineering/2-CloudDataWarehouses/Lesson4/Data_Warehouse_Project/test.ipynb
+.metals/
 
