up through start of Data Lakes With Spark project

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,33 @@
+.metals/
+.idea/
+.ipynb_checkpoints/
+
+venv/
+__pycache__/
+event_data/
+Data_Warehouse_Project_Template/
+
 .DS_Store
+.Rhistory
+
 *.csv
 *.json
 *.JSON
-.ipynb_checkpoints/
-__pycache__/
-event_data/
 *.odt
 *.pdf
-.Rhistory
-Data_Warehouse_Project_Template/
+*.gz
+*.zip
+*.xml
+*.bak
+
+*.iml
 *.cfg
+*.pem
+
+*solution.ipynb
 *Solution.ipynb
-log_json_path.json
 DataEngineering/2-CloudDataWarehouses/Lesson4/Data_Warehouse_Project/test.ipynb
-.metals/
+DataEngineering/3-DataLakesWithSpark/Lesson5/test.ipynb
+
+*.pem
 
